# ft_printf

./: Makefile
header/: ft_printf.h
libft/: Makefile  ft_l_itoa.c  ft_ltoa_base.c  ft_strsplit.c  ft_utoa_base.c  libft.h
src/: ft_float_accuracy.c  ft_float_roun.c  ft_help_norm_for_d.c  ft_mod_lenght.c  ft_mod_lenght_2.c  ft_parse_format.c  ft_print_float.c  ft_print_int.c  ft_print_o.c  ft_print_o_p.c  ft_print_str_char_p.c  ft_print_str_char_pr.c  ft_print_type.c  ft_print_u.c  ft_print_x.c  ft_printf.c  ft_space_for_x.c  ft_struct.c
test/: CMakeLists.txt  a.out  main.c  start  testmain.c  tt.c
test/a.out.dSYM/Contents/Resources/DWARF/: a.out
xcode/: ft_printf.c  ft_printf.h  main.c
